--- a/src/views/Header/Header.module.css
+++ b/src/views/Header/Header.module.css
@@ -1,4 +1,17 @@
 .header {
-  font-size: 28px;
-  color: rgb(214, 142, 7);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 70px;
+  color: rgb(0, 7, 3);
+  background-color: #1daa31;
+  /* border: 1px dotted black; */
+}
+
+.leftBlock,
+.rightBlock {
+  display: flex;
+  flex-direction: row;
+  margin: 0 30px;
 }
