--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,11 +1,11 @@
 .buttonStock {
-    width: 145px; 
+    width: 145px;
     height: 45px;
-    display: flex; 
+    display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 20px; 
-    background-color: rgb(225 225 225); 
+    margin-right: 20px;
+    background-color: rgb(225 225 225);
     color: rgb(69 69 81);
     font-size: 25px;
 }
@@ -15,46 +15,52 @@
     background-color: rgb(167, 165, 165);
 }
 
-.buttonBig {
-    width: 380px; 
-    height: 64px;
-    display: flex; 
-    align-items: center;
+.buttonADD {
+    display: flex;
+    align-items:center;
     justify-content: center;
-    margin-right: 20px; 
-    background-color: rgb(225 225 225); 
-    color: rgb(69 69 81);
-    font-size: 25px;
+    border-radius: 15px;
+    border: 1px solid #000;
+    width: 213px;
+    height: 95px;
+    cursor: pointer;
+    font-size: 30px;
+}
+.buttonADDIcon {
+    width: 49px;
+    height: 45px;
+    background-image: url('../../assets/images/icon/iconADD.png');
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 
-.buttonBig:hover {
-    cursor: pointer;
-    background-color: rgb(167, 165, 165);
+.buttonADD:hover {
+    background-color: rgb(100, 236, 153, 0.5);
 }
+
 .buttonDone {
-    width: 180px; 
-    height: 64px;
-    display: flex; 
+    border-radius: 15px;
+    border: 1px solid black;
+    height: 30px;
+    display: flex;
     align-items: center;
     justify-content: center;
-    /* margin-right: 20px;  */
-    /* background-color: rgb(225 225 225);  */
     color: rgb(69 69 81);
     font-size: 25px;
 }
 
 .buttonDone:hover {
     cursor: pointer;
-    background-color: rgb(167, 165, 165);
+    background-color: rgb(180, 191, 228);
 }
+
 .buttonDelete {
-    width: 170px; 
-    height: 64px;
-    display: flex; 
+    border-radius: 15px;
+    border: 1px solid black;
+    height: 30px;
+    display: flex;
     align-items: center;
     justify-content: center;
-    /* margin-right: 20px;  */
-    /* background-color: rgb(225 225 225);  */
     color: rgb(69 69 81);
     font-size: 25px;
 }
