--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,10 +1,27 @@
-.inputFilter{
-    width: 305px;
-    height: 45px;
+.inputFilter {
+    width: 100%;
+    height: 30px;
     font-size: 25px;
+    border: 0;
+    background: transparent;
 }
-.inputTaskAdd{
-    width: 1200px;
-    height: 60px;
-    font-size: 25px;
+
+.inputTaskAdd {
+    min-width: 400px;
+    width: 100%;
+    margin: 0 10px;
+    height: 80px;
+    border: 0;
+    border-bottom: 1px solid black;
+    font-size: 36px;
+    background-color: none;
+    background: transparent;
+}
+
+.inputTaskAdd, .inputFilter:focus {
+    outline: none;
+}
+
+.inputTaskAdd, .inputFilter::placeholder {
+    font-family: 'Vollkorn', serif;
 }
