--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,32 +1,37 @@
-/* #e1e1e1 */
-/* #f5f5f5 */
-/* #a6d0ac */
-
-.itemWrap{
-    height: 64px;
+.tableRow {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* background-color: #f5f5f5; */
-    font-size: 24px;
-    /* border: 1px dotted black; */
-    
-}
-.itemWrap:hover{
-    /* cursor: pointer; */
-    background-color: #e1e1e1; 
+    background-color: #fff;
 }
 
-.blockRight{
+.tableRow:hover {
     display: flex;
-    align-items: center;
-    flex-direction: row;
+    background-color: #dddddd;
+    /* border: 1px black dotted; */
 }
 
-.titleTask{
-    padding-left: 200px;
+.tableCell {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.date{
-    padding: 25px
+.tableCell:nth-child(1) {
+    max-width: 80px;
+}
+
+.tableCell:nth-child(2) {
+    max-width: 420px;
+}
+
+.tableCell:nth-child(3) {
+    max-width: 230px;
+}
+
+.tableCell:nth-child(4),
+.tableCell:nth-child(5),
+.tableCell:nth-child(6) {
+    max-width: 140px;
 }
