--- a/src/views/Header/Header.module.css
+++ b/src/views/Header/Header.module.css
@@ -1,17 +1,46 @@
 .header {
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  height: 70px;
-  color: rgb(0, 7, 3);
-  background-color: #1daa31;
-  /* border: 1px dotted black; */
+  padding: 10px 0;
 }
 
-.leftBlock,
-.rightBlock {
+.logo{
   display: flex;
-  flex-direction: row;
-  margin: 0 30px;
+  align-items:center;
+  cursor: pointer;
+}
+
+.logoIMG{
+margin: 10px 0;
+}
+
+.wrapTextLogo{
+  margin-left: 10px;
+}
+
+.title{
+  margin:0;
+}
+.description{
+  font-size: 25px;
+}
+
+.inputBlock{
+  display: flex;
+  align-items:center;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .logoIMG {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
