--- a/src/views/Fillter/Filter.module.css
+++ b/src/views/Fillter/Filter.module.css
@@ -1,11 +1,27 @@
+.wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.buttonBlock {
+    display: flex;
+}
+
 .search {
     display: flex;
     align-items: center;
     height: 35px;
     border-radius: 15px;
     border: 1px solid #000;
-    margin: 10px 0;
-    padding: 0 10px;
+    /* margin: 0; */
+    margin-bottom: 15px;
+    padding: 0 20px;
+    background-color: #61dafb;
+    width: 100%;
+}
+
+.search:hover {
+    background-color: transparent;
 }
 
 .iconSearch {
