feat: add modal info, About

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -11,11 +11,13 @@
     color: #000000;
     font-size: 20px;
     border-radius: 15px;
+    transition: transform 0.1s ease-in-out;
 }
 
 .buttonStock:hover {
     cursor: pointer;
     background-color: transparent;
+    transform: scale(1.01);
 }
 
 .buttonADD {
