--- a/src/views/Footer/Footer.module.css
+++ b/src/views/Footer/Footer.module.css
@@ -18,7 +18,7 @@
     border: 1px solid #000;
     margin: 10px 0;
     padding: 0 10px;
-    position: absolute;
+    /* position: absolute; */
 
     /* Как будет все готово, нужно будет переверстать */
     bottom: 0;
