--- a/src/components/ItemList/ItemLIst.module.css
+++ b/src/components/ItemList/ItemLIst.module.css
@@ -2,9 +2,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid #ccc;
-    /* border-radius: 15px; */
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
+    border-radius: 15px;
     overflow: hidden;
     font-size: 20px;
 }
