--- a/src/views/Main/Main.module.css
+++ b/src/views/Main/Main.module.css
@@ -2,6 +2,19 @@
     border-radius: 15px;
     border: 1px solid #000;
     flex: 1;
-    margin-bottom: 55px;
+    /* margin-bottom: 55px; */
     /* padding: 10px; */
+}
+
+.noData {
+    width: 150px;
+    height: 150px;
+    background-image: url(./../../assets/images/icon/iconNoData.png);
+    background-size: contain;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin: 0 auto;
+    
+
 }
