refactor: redisign background and block

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -26,9 +26,11 @@
     border-radius: 15px;
     border: 1px solid #000;
     width: 213px;
-    height: 95px;
+    height: 85px;
     cursor: pointer;
     font-size: 30px;
+    margin-top: 10px;
+
 }
 
 .buttonADDIcon {
