--- a/src/views/Main/Main.module.css
+++ b/src/views/Main/Main.module.css
@@ -1,9 +1,11 @@
 .main {
     border-radius: 15px;
-    border: 1px solid #000;
+    border: 1px solid #fff;
     flex: 1;
     /* margin-bottom: 55px; */
     /* padding: 10px; */
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
 }
 
 .noData {
