--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,6 +1,11 @@
 body {
   margin: 0;
   font-family: 'Vollkorn', serif;
+  background-image: url('./../../assets/images/bg.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 code {
