--- a/src/views/Footer/Footer.module.css
+++ b/src/views/Footer/Footer.module.css
@@ -7,6 +7,7 @@
     border: 1px solid hsl(0, 0%, 0%);
     margin: 10px 0;
     padding: 0 10px;
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .footer {
@@ -15,7 +16,8 @@
     justify-content: center;
     height: 35px;
     border-radius: 15px;
-    border: 1px solid #000;
+    border: 1px solid #fff;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
     margin: 10px 0;
     padding: 0 10px;
     /* position: absolute; */
