--- a/src/views/Header/Header.module.css
+++ b/src/views/Header/Header.module.css
@@ -2,6 +2,12 @@
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+  border: 1px solid #fff;
+  border-radius: 20px;
+  margin: 20px 0;
+  padding: 0 10px;
 }
 
 .logo {
